# controllers/match_controller.go
@@ -205,7 +205,7 @@ func GetMatchByID(c *gin.Context) {
 
 	query := `
 		SELECT 
-			m.match_id, m.week, m.day, m.date, m.team_a_id, m.team_b_id, 
+			m.match_id, m.week, m.day, m.date, m.team_a_id, m.team_b_id, m.tournament_id,
 			tA.team_id AS team_a_team_id, tA.name AS team_a_name, tA.image AS team_a_image,
 			tB.team_id AS team_b_team_id, tB.name AS team_b_name, tB.image AS team_b_image,
 			m.team_a_score, m.team_b_score
@@ -253,7 +253,7 @@ func GetMatchesByTournamentID(c *gin.Context) {
 
 	query := `
 		SELECT 
-			m.match_id, m.week, m.day, m.date, m.team_a_id, m.team_b_id, 
+			m.match_id, m.week, m.day, m.date, m.team_a_id, m.team_b_id, m.tournament_id,
 			tA.team_id AS team_a_team_id, tA.name AS team_a_name, tA.image AS team_a_image,
 			tB.team_id AS team_b_team_id, tB.name AS team_b_name, tB.image AS team_b_image,
 			m.team_a_score, m.team_b_score
